# FHS.py

./: ReadMe.md  setup.cfg
FHS/: GNUDirs.py  __init__.py
tests/: tests.py
