[metadata]
name = FHS
#version = 0.1
author = KOLANICH
url = https://github.com/KOLANICH/FHS.py
description = Represents a target triple.
long_description = file: ReadMe.md
keywords = path, standardize, FHS
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.4
zip_safe = True
packages = FHS
setup_requires = setuptools_scm;

